# hypernova

./: .gitignore  README.md  README.rst  setup.cfg  setup.py
contrib/devstack/: README.rst  copy_logs_hook.sh  gate_hook.sh  prepare_devstack.sh
contrib/devstack/extras.d/: 70-hyper.sh
contrib/devstack/lib/nova_plugins/: hypervisor-hyper
examples/: podfile.json
nova/compute/: hv_type.patch
novahyper/: __init__.py  i18n.py
novahyper/virt/: hostutils.py
novahyper/virt/hyper/: __init__.py  api.py  client.py  driver.py  errors.py  hostinfo.py  network.py  utils.py  vifs.py
novahyper/virt/hyper/unixconn/: unixconn.py
